--- a/wedding/app/views/home/index.html.erb
+++ b/wedding/app/views/home/index.html.erb
@@ -132,7 +132,7 @@
 <div class="col-xs-12 rsvp" id="rsvp">
   <h1>We hope you can join us !</h1>
   <div class="col-xs-12 rsvp-box">
-    <%= form_tag reservation_path, :class => "form-horizontal" do |f| %>
+    <%= form_tag reservation_path, :class => "form-horizontal", :remote => true do |f| %>
       <div class="form-group">
         <div class="col-xs-12">
           <%= text_field_tag "name", nil, :placeholder => "Please insert your Name",
@@ -167,6 +167,22 @@
 <div class="col-xs-12 save-the-date">
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="thanks_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Thank You !</h4>
+      </div>
+      <div class="modal-body">
+        Thank you for your RSVP !<br />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= javascript_include_tag "css3-animate-it" %>
-
